...
              required
              value={formState.email}
              onChange={handleChange}
              placeholder="you@example.edu"
            />
            <Input
              label="Password"
              type="password"
              name="password"
              autoComplete={
                isRegisterMode ? "new-password" : "current-password"
              }
              required
...
