# yaml-language-server: $schema=https://raw.githubusercontent.com/jackcrane/cypress-yaml-plugin/main/schema.json

# This test suite checks to verify that it throws an incorrect email or password message if we attempt to log into an account that does not exist.

name: Create course
seedFile: fixtures/account.sql
steps:
  - authenticateUser:
      username: test@featurebench-test.com
      password: Password!
  - open: /
  - setViewport:
      width: 1280
      height: 720
  - waitFor: 200
  - createAndAffiliateStripeCustomer:
      dbId: cmj9ffow70000qr6banbe3856
      name: Test Teacher,
      email: test@featurebench-test.com
  - tapOn:
      text: "Create a new course"
  - typeText:
      placeholder: "e.g., Intro to CAD"
      text: E2E Test Course
      allowScroll: true
  - typeText:
      placeholder: "e.g., ENGR 1701"
      text: E2E 222
      allowScroll: true
  - tapOn:
      text: "Students pay"
  - tapOn:
      text: "Create course"
  - assertVisible:
      text: "E2E Test Course"
      allowScroll: true
  - assertVisible:
      dataCy: "enrollment-row-E2E Test Course-E2E 222"
      allowScroll: true
  - assertVisible:
      dataCy: "enrollment-type-E2E Test Course-teacher"
      allowScroll: true
  - forceSetJoinCode:
      code: E2E
  ################################################################################
  # Checking to see that a student is in fact charged for the course
  - createAndAffiliateStripeCustomer:
      dbId: cmj9ffow70000qr6banbe3d56 # Student
      name: Test Student,
      email: student@featurebench-test.com
  - authenticateUser:
      username: student@featurebench-test.com
      password: Password!
  - open: /
  - waitFor: 200
  - assertStripeCustomerValue:
      dbId: cmj9ffow70000qr6banbe3d56 # Student
      balance: 0
  - typeText:
      placeholder: "e.g., STU-1A2B3C"
      text: STU-E2E
  - tapOn:
      text: "Join course"
  - waitFor: 1000
  - fillStripeElementsInput:
      field: cardNumber
      value: "4242424242424242"
  - fillStripeElementsInput:
      field: cardExpiry
      value: "429" # 4/29
  - fillStripeElementsInput:
      field: cardCvc
      value: "123"
  - tapOn:
      text: "Save payment method"
  - waitFor: 1000
  - tapOn:
      text: "Confirm and join"
  - assertVisible:
      text: "Payment confirmed! You're enrolled in E2E Test Course."
  - tapOn:
      text: "Close"
  - waitFor: 10000
  - assertStripeCustomerValue:
      dbId: cmj9ffow70000qr6banbe3d56 # Student
      balance: 2000
  - assertVisible:
      dataCy: "enrollment-row-E2E Test Course-E2E 222"
      allowScroll: true
  - assertVisible:
      dataCy: "enrollment-type-E2E Test Course-student"
      allowScroll: true
  - assertStripeCustomerValue:
      dbId: cmj9ffow70000qr6banbe3856 # Teacher
      balance: 0
