# yaml-language-server: $schema=https://raw.githubusercontent.com/jackcrane/cypress-yaml-plugin/main/schema.json

# This test suite checks to make sure students can still join a course if the teacher has a card that does not allow off-canvas payments

name: Create course (per-course billing)
seedFile: fixtures/account.sql
steps:
  - authenticateUser:
      username: test@featurebench-test.com
      password: Password!
  - open: /
  - setViewport:
      width: 1280
      height: 720
  - waitFor: 200
  - createAndAffiliateStripeCustomer:
      dbId: cmj9ffow70000qr6banbe3856
      name: Test Teacher
      email: test@featurebench-test.com
  - tapOn:
      text: "Create a new course"
  - typeText:
      placeholder: "e.g., Intro to CAD"
      text: E2E Test Course
      allowScroll: true
  - typeText:
      placeholder: "e.g., ENGR 1701"
      text: E2E 222
      allowScroll: true
  - fillStripeElementsInput:
      field: cardNumber
      value: "4000002760003184"
  - fillStripeElementsInput:
      field: cardExpiry
      value: "429" # 4/29
  - fillStripeElementsInput:
      field: cardCvc
      value: "123"
  - tapOn:
      text: "Save payment method"
  - waitFor: 5000
  - acceptStripe3dSecure:
      action: accept
  - waitFor: 2000
  - assertVisible:
      text: "Payment method saved"
  - tapOn:
      text: "Create course"
  - assertVisible:
      text: "E2E Test Course"
      allowScroll: true
  - assertVisible:
      dataCy: "enrollment-row-E2E Test Course-E2E 222"
      allowScroll: true
  - assertVisible:
      dataCy: "enrollment-type-E2E Test Course-teacher"
      allowScroll: true
  - forceSetJoinCode:
      code: E2E
  ################################################################################
  # Checking to see that a teacher is in fact charged for the course
  - authenticateUser:
      username: student@featurebench-test.com
      password: Password!
  - open: /
  - setViewport:
      width: 1280
      height: 720
  - waitFor: 200
  - assertStripeCustomerValue:
      dbId: cmj9ffow70000qr6banbe3856 # Teacher
      balance: 0
  - typeText:
      placeholder: "e.g., STU-1A2B3C"
      text: STU-E2E
  - tapOn:
      text: "Join course"
  - waitFor: 5000
  # Log in as teacher to see notification
  - authenticateUser:
      username: test@featurebench-test.com
      password: Password!
  - open: /
  - waitFor: 500
  - assertVisible:
      dataCy: "notifications-button-unread-dot"
  - tapOn:
      dataCy: "notifications-button"
  - assertVisible:
      text: "Authorize payment"
  - tapOn:
      text: "Authorize payment"
  - assertVisible:
      text: "Using VISA ending in 3184."
  - tapOn:
      text: "Charge saved payment method"
  - waitFor: 5000
  - acceptStripe3dSecure:
      action: accept
  - waitFor: 2000
  - assertVisible:
      text: "Payment complete"
  - assertVisible:
      text: "The payment was successful and the student is now fully enrolled in your course."
  - tapOn:
      text: "Close"
  - waitFor: 1000
  - waitFor: 5000
  - assertStripeCustomerValue:
      dbId: cmj9ffow70000qr6banbe3856 # Teacher
      balance: 1200
  - assertEnrollmentFollowUpResolvedAt:
      userId: cmj9ffow70000qr6banbe3d56 # Student
